--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lucide-react": "^0.471.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-sparklines": "^1.7.0",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
